# ml-project-group10

./: .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt
models/: best_dl_model.pth  ohe_encoder.joblib  scaler.joblib
modules/: classical_learning.py  classical_pipeline.py  deep_learning.py  eda.py  eda_dl.py  mappings.py  preprocessing.py  tuning.py  tuning_mlp.py
notebooks/: 01_eda.ipynb  02_preprocessing.ipynb  03_classical_pipeline.ipynb  04_deep_learning.ipynb  05_main.ipynb  data-setup.ipynb  deep_learning.ipynb  dl_colab.ipynb  model_01.ipynb
