[project]
name = "ml-project-group10"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "category-encoders>=2.8.1",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "optuna>=4.8.0",
    "pandas>=2.3.3",
    "pytorch-tabnet>=4.1.0",
    "scikit-learn>=1.7.2",
    "torch>=2.11.0",
]
